Added libraries to paper.RMD. Also made all script files run internally (look around line 260 in paper for calls to both data_exploration and units_species, the problematic ones). However, I still can't knit the doc because of some sort of working directory problem, so run into an error at the CSV script. If the directory isn't giving you a problem it should knit.

--- a/analysis/paper/paper.Rmd
+++ b/analysis/paper/paper.Rmd
@@ -40,7 +40,7 @@ knitr::opts_chunk$set(
   fig.path = "../figures/"
 )
 
-library(dplyr);library(ggplot2);library(dbplyr);library(readr)
+library(dplyr);library(ggplot2);library(dbplyr);library(readr);library(stringr);library(tidyr);library(lubridate);library(ggthemes);library(ggforce)
 
 ```
 # Things To Discuss
@@ -258,6 +258,7 @@ Questions: what is cue to start of survey season?
 
 ```{r}
 source("../scripts/data_exploration.R")
+source("../scripts/units_species.R")
 ```
 
 *Sample Frame* 
