--- a/analysis/paper/paper.Rmd
+++ b/analysis/paper/paper.Rmd
@@ -212,12 +212,13 @@ What sort of observations would trigger action? What actions?
 *Spatial* Upper Lynn Canal visible from coastline from Skagway to Dyea, including Skagway & Taiya river mouths and Nahku Bay (between Skagway and Dyea Point)
 
 ```{r DataInput, eval=TRUE, echo=FALSE, cache=TRUE}
-# if (system("git config user.email")=="mward2@swarthmore.edu") source("./scripts/data_retrievalSwarthmore.R")
+# if (system("git config user.email")=="mward2@swarthmore.edu") 
+#      source("./scripts/data_retrievalSwarthmore.R")
 # else source("./scripts/data_retrievalNPS.R")
 
 #NOTE: working directory when knitting markup is /analysis/paper. So relative pathway needs to be ../scripts etc.
-getwd()
-source("./analysis/scripts/data_retrievalCSVs.R")
+source("../scripts/data_retrievalCSV.R")
+
 ```
 
 Species: 
@@ -256,8 +257,7 @@ Questions: what is cue to start of survey season?
 *Madeleine later* Diagnostic analysis => check dates & unit of first non-zero counts each year for each spp (relative to dates of initiating surveys)
 
 ```{r, eval=TRUE}
-source("./analysis/scripts/data_exploration.R")
-#source("../scripts/units_species.R")
+source("../scripts/data_exploration.R") 
 ```
 
 *Sample Frame* 
