minor additions to *.bib file and .gitignore.

--- a/analysis/paper/KLGOCWS_References.bib
+++ b/analysis/paper/KLGOCWS_References.bib
@@ -31,7 +31,7 @@ title = {{Monitoring the condition of natural resources in US national parks}},
 volume = {151},
 year = {2009}
 }
-@techreport{Gallo2018,
+@techreport{Gallo2018a,
 abstract = {Data analysis and reporting requirements.},
 address = {Fort Collins},
 author = {Gallo, Kirsten (NPS I {\&} M)},
@@ -47,11 +47,22 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/5784470},
 year = {2018}
 }
 @article{Hahr2004,
-author = {Hahr, Meg and Trapp, Todd W and Hahr, Meg and Trapp, Todd W},
+author = {Hahr, Meg and Trapp, Todd W},
 file = {:C$\backslash$:/Users/jhreynolds/Documents/Mendeley Desktop/Hahr et al/2004/Hahr et al.{\_}2004{\_}Unknown{\_}Waterbird and Breeding Landbird Inventories in Klondike Gold Rush National Historical Park Waterbird and Breedi.pdf:pdf},
 number = {May},
 title = {{Waterbird and Breeding Landbird Inventories in Klondike Gold Rush National Historical Park Waterbird and Breeding Landbird Inventories in Klondike Gold Rush National Historical Park Final Report}},
 year = {2004}
+}
+@article{Lindenmeyer2009,
+author = {Lindenmeyer, D B and Likens, G E},
+doi = {10.1016/j.tree.2009.03.005},
+journal = {Trends in Ecology and Evolution},
+number = {9},
+pages = {482--486},
+pmid = {19409648},
+title = {{Adaptive monitoring: a new paradigm for long-term research and monitoring}},
+volume = {24},
+year = {2009}
 }
 @techreport{Mitchell2018,
 author = {Mitchell, Brian and Chung-MacCoubrey, Alice and Comiskey, Jim and Garrett, Lisa and MacCluskie, Maggie and Moore, Bill and Philippie, Tom and Sanders, Geoff and Schmit, {John Paul}},
