--- a/analysis/paper/paper.Rmd
+++ b/analysis/paper/paper.Rmd
@@ -6,12 +6,16 @@ author:
 - name: Madeleine Ward^[Swarthmore College, Dept. of Mathematics and Statistics]
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
-  word_document:
+  bookdown::word_document2:
+    fig_caption: yes
     toc: yes
   html_document:
     df_print: paged
+    fig_caption: yes
+    number_sections: yes
     toc: yes
   pdf_document:
+    fig_caption: yes
     toc: yes
 keywords: keyword 1; keyword 2; keyword 3
 link-citations: yes
@@ -24,9 +28,11 @@ abstract: The Coastal Waterbird Survey has been conducted, with varying levels o
   time, and budgets, it is imperative that surveys be conducted efficiently in terms
   of both choice of sampling design and choice of sampling effort. Now that KLGO has
   multiple years of experience implementing the protocol, it is timely to step back
-  and assess how things are going. We review the current program's objectives and survey design,
-  identify statistical issues, and recommend potential solutions. Major topics include... blah blah. The study concludes with a series of recommended tasks that the park should
-  undertake to improve the coastal waterbird survey's efficiency and effectiveness.
+  and assess how things are going. We review the current program's objectives and
+  survey design, identify statistical issues, and recommend potential solutions. Major
+  topics include... blah blah. The study concludes with a series of recommended tasks
+  that the park should undertake to improve the coastal waterbird survey's efficiency
+  and effectiveness.
 ---
 
 <!-- This is the format for text comments that will be ignored during renderings. Do not put R code in these comments because it will not be ignored. -->
@@ -53,16 +59,17 @@ library(dplyr);library(ggplot2);library(dbplyr);library(readr);library(stringr);
 - add all libraries used in scripts to 'setup' code chunk (just above) rather than just loading in script so that it is easy to see what needs to be loaded before you can successfully knit.
 - documentation in scripts
 
-# Issues to Resolve
-- How do we use latex figure environment in rmarkdown (for inclusion of ggplot graphics; captioning figures and labelling for cross-references, etc)?
+# Issues to Resolve with Rmarkdown, Knitr, Github, etc.
 - conversion from paper.md to paper.pdf (pandoc issue?) 
   (i) update MikTex package, set dev=c('pdf') in setup
 - github permissions for Madeleine on local machine
 - adding files to .gitignore
+
+# Issues to Resolve with content (narrative, figures, analyses)
 - What is up with 2008 surveys? why such distinct timing?
 
 # Introduction
-Since 2003, staff at Klondike Gold Rush National Historical Park (KLGO) have surveyed coastal waterbird species distribution and abundance multiple times each year from late April through late September (Coastal Waterbird Survey or ‘CWS’; [@Surdyk2018]).  This is sufficient history to warrant stepping back and assessing the monitoring program.  Such assessments are key to an adaptive monitoring program [@Lindenmeyer 2009], are an important and distinct phase to promote program, and institutional, learning and evolution [@Reynolds2016], and align with guidance from NPS' Inventory and Monitoring Division [@Gallo2018a, @Mitchell2018].  
+Since 2003, staff at Klondike Gold Rush National Historical Park (KLGO) have surveyed coastal waterbird species distribution and abundance multiple times each year from late April through late September (Coastal Waterbird Survey or ‘CWS’; [@Surdyk2018]).  This is sufficient history to warrant stepping back and assessing the monitoring program.  Such assessments are key to an adaptive monitoring program [@Lindenmayer2009], are an important and distinct phase to promote program, and institutional, learning and evolution [@Reynolds2016], and align with guidance from NPS' Inventory and Monitoring Division [@Gallo2018a, @Mitchell2018].  
 
 Assessing a monitoring program focuses on four broad topics following the major Phases of a monitoring program (ibid):  
 1. _why_ - [Problem Framing & Information Objectives] Are the management objective(s) motivating the monitoring well articulated? Do they remain relevant and important?  
@@ -226,7 +233,7 @@ What sort of observations would trigger action? What actions?
 *Target Frame* - space, time, scale, target populations
 *Spatial* Upper Lynn Canal visible from coastline from Skagway to Dyea, including Skagway & Taiya river mouths and Nahku Bay (between Skagway and Dyea Point)
 
-```{r Data_Retrieval, eval=TRUE, echo=FALSE, warning = FALSE}
+```{r Data-Retrieval, eval=TRUE, echo=FALSE, warning = FALSE}
 # if (system("git config user.email")=="mward2@swarthmore.edu") 
 #      source("./scripts/data_retrievalSwarthmore.R")
 # else source("./scripts/data_retrievalNPS.R")
@@ -279,11 +286,22 @@ source("../scripts/data_wrangling.R")
 Questions: what is cue to start of survey season?
 *Madeleine later* Diagnostic analysis => check dates & unit of first non-zero counts each year for each spp (relative to dates of initiating surveys)
 
-```{r EDA_SurveyTiming, eval=TRUE, cache = FALSE, fig.show= 'asis'}
- source("../scripts/survey_timing_EDA.R", echo=FALSE) 
-print(Plot1)
+
+The annual dates of the first and last survey each year has varied by over a month (Figure \@ref(fig:Fig-SurveyTiming)).
+
+```{r EDA_SurveyTiming, eval=TRUE, cache = TRUE, include = FALSE}
+# dotplot of survey times by year
+source("../scripts/survey_timing_EDA.R", echo=FALSE)
 
 ```
+
+
+
+```{r Fig-SurveyTiming, echo=FALSE, eval=TRUE, cache=TRUE, dependson= c("EDA_SurveyTiming"), fig.show= 'asis', fig.cap="The annual dates of the first and last survey have both varied by over a month across the years."}
+
+print(Plot1)
+```
+
 
 *Sample Frame* 
 Spatial: same coverage as Target Frame. Area split into eight survey areas [see @Hahr2004].
